--- a/spell-lang.csproj
+++ b/spell-lang.csproj
@@ -12,24 +12,16 @@
     <PackageProjectUrl></PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/DestinMeza/spell-lang</RepositoryUrl>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
+    <AssemblyVersion>0.1.1</AssemblyVersion>
+    <FileVersion>0.1.1</FileVersion>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="DiagnosticsManager">
-      <HintPath>..\..\..\DiagnosticsManager\DiagnosticsManager\bin\Release\netstandard2.0\DiagnosticsManager.dll</HintPath>
-    </Reference>
-    <Reference Include="GameTask">
-      <HintPath>..\..\..\GameTask\GameTask\bin\Release\netstandard2.0\GameTask.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
